Adding server: shiny

--- a/IntroStats/CentralLimitTheroem.qmd
+++ b/IntroStats/CentralLimitTheroem.qmd
@@ -2,10 +2,10 @@
 title: "Central Limit Theorem"
 author: "Russell Almond"
 date: "September 8, 2020"
-output: 
+format:
   html:
     sidebar: id-intro
-runtime: shiny
+server: shiny
 ---
 
 ```{r setup, include=FALSE}
