--- a/IntroStats/ConfidenceInterval.qmd
+++ b/IntroStats/ConfidenceInterval.qmd
@@ -2,10 +2,10 @@
 title: "Confidence Intervals"
 author: "Russell Almond"
 date: "3/5/2019"
-output: 
+format:
   html:
     sidebar: id-intro
-runtime: shiny
+server: shiny
 ---
 
 ```{r setup, include=FALSE}
