--- a/IntroStats/Geyser.qmd
+++ b/IntroStats/Geyser.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Histogram Bins"
 date: "January 17, 2019"
-output: 
+format: 
   html:
     sidebar: id-intro
-runtime: shiny
+server: shiny
 ---
 
 ```{r setup, include=FALSE}
