--- a/IntroStats/BinomialParms.qmd
+++ b/IntroStats/BinomialParms.qmd
@@ -2,10 +2,10 @@
 title: "Binomial Parameters"
 author: "Russell Almond"
 date: "September 1, 2020"
-output: 
+format: 
   html:
     sidebar: id-intro
-runtime: shiny
+server: shiny
 ---
 
 ```{r setup, include=FALSE}
