--- a/IntroStats/CovidVaccines.qmd
+++ b/IntroStats/CovidVaccines.qmd
@@ -2,10 +2,9 @@
 title: "Covid-19 Vaccines"
 author: "Russell Almond"
 date: "11/18/2020"
-output: 
+format: 
   html:
     sidebar: id-intro
-  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
