--- a/IntroStats/LawOfLargeNumbers.qmd
+++ b/IntroStats/LawOfLargeNumbers.qmd
@@ -2,10 +2,10 @@
 title: "Law of Large Numbers"
 author: "Russell Almond"
 date: "February 19, 2019"
-output: 
+format: 
   html:
     sidebar: id-intro
-runtime: shiny
+server: shiny
 ---
 
 ```{r setup, include=FALSE}
