--- a/IntroStats/index.qmd
+++ b/IntroStats/index.qmd
@@ -22,9 +22,11 @@ These are demonstrations which were written for EDF 5400, which is an introducto
 alist <-  function(file) {tags$li(a(basename(file),href=file))}
 tag("ul",lapply(list.files(pattern="*.Rmd$"),alist))
 ```
-![CC-BY](https://pluto.coe.fsu.edu/by.png){width=141px}
+![CC-BY](../img/by.png){width=141px}
 
-These are licensed under the creative commons CC BY license.  You many distribute, remix, adapt, and build upon the material in any medium or format, so long as attribution is given to the creator.
+These are licensed under the creative commons CC BY license.  You many
+distribute, remix, adapt, and build upon the material in any medium or
+format, so long as attribution is given to the creator.
 
 
 For more information contact [Russell Almond](mailto:ralmond@fsu.edu). 
