--- a/RIntro/R and R Studio Presentation2.qmd
+++ b/RIntro/R and R Studio Presentation2.qmd
@@ -1,10 +1,8 @@
 ---
 title: "R and RStudio"
-output: 
+format: 
   html:
     sidebar: id-r
-  ioslides_presentation:
-widescreen: true
 ---
 
 # **What is R?**
