--- a/RIntro/index.qmd
+++ b/RIntro/index.qmd
@@ -2,7 +2,7 @@
 title: "Index of R Demonstrations for R Group"
 author: "Russell Almond"
 date: "September 4, 2020"
-output: 
+format: 
   html:
     sidebar: id-r
 ---
@@ -22,7 +22,7 @@ These are demonstrations which were written for the FSU R user group.  Many are 
 alist <-  function(file) {tags$li(a(basename(file),href=file))}
 tag("ul",lapply(list.files(pattern="*.qmd$"),alist))
 ```
-![CC-BY](../img/by.png)
+![CC-BY](../img/by.png){width=141px}
 These are licensed under the creative commons CC BY license.  You many
 distribute, remix, adapt, and build upon the material in any medium or
 format, so long as attribution is given to the creator.
